Customer - header title overlapping icons has been rectified. Seller - image overlapping issue solved

--- a/Customer/www/styles/less/custom.less
+++ b/Customer/www/styles/less/custom.less
@@ -154,6 +154,14 @@ sm{
 .bar.bar-light .title {
 	left: 60px !important;
 	right: 60px !important;
+	span.nav-bar-title {
+		max-width: 150px;
+		display: block;
+		margin: 0 auto;
+		white-space: nowrap;
+		text-overflow: ellipsis;
+		overflow: hidden;
+	}
 }
 button.button.button-assertive {
 	b {color: #fff;}
